[headings] fix: panel hover gap and line height (#3655)

--- a/packages/toolbars-new/web/src/modals/panels/styles.scss
+++ b/packages/toolbars-new/web/src/modals/panels/styles.scss
@@ -58,6 +58,7 @@
           text-overflow: ellipsis;
           white-space: nowrap;
           overflow: hidden;
+          line-height: 25px;
         }
       }
 
