--- a/packages/toolbars-v3/web/src/modals/panels/styles.scss
+++ b/packages/toolbars-v3/web/src/modals/panels/styles.scss
@@ -57,6 +57,7 @@
           text-overflow: ellipsis;
           white-space: nowrap;
           overflow: hidden;
+          line-height: 25px;
         }
       }
 
